Add HTML structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <title>Todo App</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__container">
+            <h1 class="header__title">Todo App</h1>
+        </div>
+    </header>
+    <main class="main">
+        <section class="todo">
+            <h2 class="todo__title">List of tasks</h2>
+            <div class="todo__container">
+                <button class="todo__button todo__button--add">Add</button>
+                <button class="todo__button todo__button--remove">Remove</button>
+                <button class="todo__button todo__button--clear">Clear</button>
+                <ul class="todo__list">
+                    
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer__container">
+            <p class="footer__author">Designed by Jakub Matusiak</p>
+        </div>
+    </footer>
+<script src="main.js" type="text/javascript"></script>
 </body>
 </html>
