Add warning message when you have no tasks

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
         <section class="todo">
             <h2 class="todo__title">List of tasks</h2>
             <div class="todo__container">
-                <button class="todo__button todo__button--add">Add</button>
-                <button class="todo__button todo__button--remove">Remove</button>
-                <button class="todo__button todo__button--clear">Clear</button>
-                <ul class="todo__list">
-                    
-                </ul>
+                <button class="todo__button todo__button--add"><span class="todo__icon fas fa-plus-circle"></span>Add</button>
+                <button class="todo__button todo__button--remove"><span class="todo__icon fas fa-minus-circle"></span>Remove</button>
+                <button class="todo__button todo__button--clear"><span class="todo__icon fas fa-trash-alt"></span>Clear</button>
+                <ul class="todo__list"></ul>
+                <p class="todo__warning">You have nothing to do!</p>
             </div>
         </section>
     </main>
